Expanded higher level running

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -4,11 +4,13 @@ A list of settable parameters to use in structured landscapes program
 
 Mutation Rate:
 Orgs per Population:
-Number of Populations
+Number of Populations:
 Migration Rate:
-Percentage of Populatin Migrated:
+Percentage of Population Migrated:
 Organism Type (RNA, Bitstring, NK Model):
+Length of Org: 
 Length of Gene:
 Number of Genes:
-# need amount of epistasis as well as the type of intragene
+K-total:
+K-intra:
 Number of Updates:
