--- a/parameters.cfg
+++ b/parameters.cfg
@@ -2,15 +2,15 @@
 A list of settable parameters to use in structured landscapes program
 """
 
-Mutation Rate:
-Orgs per Population:
-Number of Populations:
-Migration Rate:
-Percentage of Population Migrated:
-Organism Type (RNA, Bitstring, NK Model):
-Length of Org: 
-Length of Gene:
-Number of Genes:
-K-total:
-K-intra:
-Number of Updates:
+Mutation Rate:0.5
+Orgs per Population:100
+Number of Populations:10
+Migration Rate:0.2
+Percentage of Population Migrated:0.1
+Organism Type (RNA, Bitstring, NK Model):NK Model
+Length of Org:10
+Length of Gene:5
+Number of Genes:2
+K-total:0
+K-intra:0
+Number of Updates:50
