Rewrote param_parser to not be dependant on lineno

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -1,16 +1,14 @@
-"""
-A list of settable parameters to use in structured landscapes program
-"""
+# A list of settable parameters to use in structured landscapes program
 
 Mutation Rate:0.5
 Orgs per Population:100
 Number of Populations:10
 Migration Rate:0.2
-Percentage of Population Migrated:0.1
-Organism Type (RNA, Bitstring, NK Model):NK Model
+Proportion of Population Migrated:0.1
+Organism Type:NK Model #(RNA, Bitstring, NK Model)
 Length of Org:10
 Length of Gene:5
 Number of Genes:2
 K-total:0
 K-intra:0
-Number of Updates:50
+Number of Generations:50
