refactored run.py

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -1,5 +1,6 @@
 # A list of settable parameters to use in structured landscapes program
 
+Output File Path:../saved_runs.dat # Where to save the run data
 Mutation Rate:0.5
 Orgs per Population:100
 Number of Populations:10
