Added better documentation to parameters.cfg

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -1,15 +1,20 @@
 # A list of settable parameters to use in structured landscapes program
 
 Output File Path:../saved_runs.dat # Where to save the run data
-Mutation Rate:0.5
+Mutation Rate:0.01
 Orgs per Population:100
 Number of Populations:10
 Migration Rate:0.2
 Proportion of Population Migrated:0.1
 Organism Type:NK Model #(RNA, Bitstring, NK Model)
-Length of Org:10
-Length of Gene:5
-Number of Genes:2
-K-total:0
-K-intra:0
+
+# "Length of Org" must be "Length of Gene" * "Number of Genes"
+Length of Org:12
+Length of Gene:6
+Number of Genes:2 
+
+# "K-total is the number of dependances per loci"
+K-total:5
+# "K-intra is the number of dependances (that are with the same gene) per loci"
+K-intra:5
 Number of Generations:50
