adjusted parameters cfg file to reflect past changes

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -10,11 +10,13 @@ Organism Type:NK Model #(RNA, Bitstring, NK Model)
 
 # "Length of Org" must be "Length of Gene" * "Number of Genes"
 Length of Org:12
-Length of Gene:6
-Number of Genes:2 
+Number of Genes:1 #defaults to 1
 
 # "K-total is the number of dependances per loci"
 K-total:5
+Number of Generations:50
+
+# Length of Gene and K-intra only matter when Numbers of Genes > 1
+Length of Gene:6 
 # "K-intra is the number of dependances (that are with the same gene) per loci"
 K-intra:5
-Number of Generations:50
