expanded documentation for comma seperated parameters

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -1,4 +1,5 @@
 # A list of settable parameters to use in structured landscapes program
+# If multiple parameter values are specified with a ',' then run all combinations
 
 Output File Path:../saved_runs.dat # Where to save the run data
 Mutation Rate:0.01
@@ -14,7 +15,7 @@ Number of Genes:1 #defaults to 1
 
 # "K-total is the number of dependances per loci"
 K-total:5
-Number of Generations:50
+Number of Generations:2
 
 # Length of Gene and K-intra only matter when Numbers of Genes > 1
 Length of Gene:6 
