Added new options to parameters

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -2,11 +2,27 @@
 # If multiple parameter values are specified with a ',' then run all combinations
 
 Output File Path:../saved_runs.dat # Where to save the run data
+Number of Generations:2
 Mutation Rate:0.01
 Orgs per Population:100
-Number of Populations:10
+
+
+#### POPULATION SETTINGS ####
+Number of Subpopulations in Width:3
+Number of Subpopulations in Height:4
+# Number of Populations:10
+# Only needed if Width and Height not specified and multiple populations
+# are desired
+
+# Migration Type is only needed if Width and Height are specified
+# Options: Local, Global, Restricted, Unrestricted
+Migration Type:Local 
+
 Migration Rate:0.2
 Proportion of Population Migrated:0.1
+
+
+#### ORGANISM SETTINGS ####
 Organism Type:NK Model #(RNA, Bitstring, NK Model)
 
 # "Length of Org" must be "Length of Gene" * "Number of Genes"
@@ -15,7 +31,6 @@ Number of Genes:1 #defaults to 1
 
 # "K-total is the number of dependances per loci"
 K-total:5
-Number of Generations:2
 
 # Length of Gene and K-intra only matter when Numbers of Genes > 1
 Length of Gene:6 
