Added more doc in parameters.cfg

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -1,38 +1,44 @@
 # A list of settable parameters to use in structured landscapes program
 # If multiple parameter values are specified with a ',' then run all combinations
 
-Output File Path:../saved_runs.dat # Where to save the run data
-Number of Generations:2
-Mutation Rate:0.01
-Orgs per Population:100
+Output File Path: ../saved_runs.dat # Where to save the run data
+Number of Generations: 2
+Mutation Rate: 0.01
+Orgs per Population: 100
 
 
 #### POPULATION SETTINGS ####
-Number of Subpopulations in Width:3
-Number of Subpopulations in Height:4
-# Number of Populations:10
-# Only needed if Width and Height not specified and multiple populations
-# are desired
+Number of Subpopulations in Width: 3
+Number of Subpopulations in Height: 4
+# Number of Populations: 10
+# Number of Populations is only needed if Width and Height 
+# not specified and multiple populations are desired
 
 # Migration Type is only needed if Width and Height are specified
-# Options: Local, Global, Restricted, Unrestricted
-Migration Type:Local 
+# Options: (Local, Global) or (Restricted, Unrestricted) respectively
+Migration Type: Local 
 
-Migration Rate:0.2
-Proportion of Population Migrated:0.1
+Migration Rate: 0.2
+Proportion of Population Migrated: 0.1
 
 
 #### ORGANISM SETTINGS ####
-Organism Type:NK Model #(RNA, Bitstring, NK Model)
+Organism Type: NK Model #(RNA, Bitstring, NK Model)
 
+
+# This setting only applies to Bitstring and NK Model Organisms
+Length of Org: 12
+
+
+
+# NK MODEL SPECIFIC SETTINGS #
 # "Length of Org" must be "Length of Gene" * "Number of Genes"
-Length of Org:12
-Number of Genes:1 #defaults to 1
+Number of Genes: 1 #defaults to 1
 
 # "K-total is the number of dependances per loci"
-K-total:5
+K-total: 5
 
 # Length of Gene and K-intra only matter when Numbers of Genes > 1
-Length of Gene:6 
+Length of Gene: 6 
 # "K-intra is the number of dependances (that are with the same gene) per loci"
-K-intra:5
+K-intra: 5
