Added Reservoir to run parameters

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -2,7 +2,7 @@
 # If multiple parameter values are specified with a ',' then run all combinations
 
 Output File Path: ../saved_runs.dat # Where to save the run data
-Number of Generations: 1
+Number of Generations: 3
 Mutation Rate: 0.1
 Orgs per Population: 1000
 
@@ -14,9 +14,10 @@ Number of Subpopulations in Height: 8
 # Number of Populations is only needed if Width and Height 
 # not specified and multiple populations are desired
 
-# Migration Type is only needed if Width and Height are specified
-# Options: (Local, Global) or (Restricted, Unrestricted) respectively
-Migration Type: Local 
+# Migration Type Options: (Local/Restricted) Rectangular lattice with migrations between nearest 4, needs Width, Height
+# (Global/ Unrestricted) Migrations occur without respect for locality
+# (Reservoir) Migrations occur with a global, mixed reservoir
+Migration Type: Reservoir 
 
 Migration Rate: 0.33
 Proportion of Population Migrated: 0.05
